[package]
name = "wasm-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ReAct agent loop for WASM/edge environments: Thought-Action-Observation with tool dispatch"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5" }
proptest = "1"

[[bench]]
name = "agent_bench"
harness = false
